Alteração do nome dos pacotes do layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="projetaobcc20172.com.petemfoco.activity.MainActivity">
+    tools:context="projetaobcc20172.com.projetopetemfoco.activity.MainActivity">
 
 </android.support.constraint.ConstraintLayout>
