--- a/app/src/main/res/layout/activity_cadastro_endereco.xml
+++ b/app/src/main/res/layout/activity_cadastro_endereco.xml
@@ -216,14 +216,14 @@
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
                 <Button
-                    android:id="@+id/botao_endereco_cadastrar"
+                    android:id="@+id/botao_finalizar_cadastro_endereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="24dp"
                     android:background="@drawable/shapebutton"
-                    android:text="@string/cadastrar" />
+                    android:text="@string/finalizar_cadastro" />
 
             </LinearLayout>
         </ScrollView>
