--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -150,7 +150,7 @@
                     android:layout_marginTop="2dp" />
 
                 <Button
-                    android:id="@+id/botao_cadastrar"
+                    android:id="@+id/botao_cadastrar_endereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -158,7 +158,7 @@
                     android:layout_below="@+id/editText_senha2"
                     android:layout_marginTop="24dp"
                     android:background="@drawable/shapebutton"
-                    android:text="@string/cadastrar" />
+                    android:text=  "@string/cadastrar_endereco" />
 
 
             </LinearLayout>
