--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -118,7 +118,7 @@
                     android:id="@+id/TextViewPerguntaCadastro"
                     android:textStyle="bold" />-->
                 <Button
-                    android:id="@+id/botao_cadastrar"
+                    android:id="@+id/botao_cadastrar_novo_usuario"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -127,7 +127,7 @@
                     android:layout_below="@+id/linearLayout4"
                     android:layout_centerHorizontal="true"
                     android:background="@drawable/shapebuttonborder"
-                    android:text="@string/cadastrar" />
+                    android:text="@string/cadastrar_novo_usuario" />
                     <!--android:layout_marginTop="24dp" -->
 
 
