Implementação do cadastro de Endereço (https://www.pivotaltracker.com/story/show/152260828/comments/183176363) Renomeação do UF para a abreviação, mudança na mensangem de transição da tela de cadastro usuário para a de endereço, somente teclado númerico para o CEP.

--- a/app/src/main/res/layout/activity_cadastro_endereco.xml
+++ b/app/src/main/res/layout/activity_cadastro_endereco.xml
@@ -210,7 +210,7 @@
                     android:ems="10"
                     android:maxLength="9"
                     android:hint="@string/digite_seu_cep"
-                    android:inputType="text" />
+                    android:inputType="numberSigned" />
 
                 <View
                     android:layout_width="fill_parent"
