--- a/app/src/main/res/layout/activity_cadastro_endereco.xml
+++ b/app/src/main/res/layout/activity_cadastro_endereco.xml
@@ -40,6 +40,7 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoLogradouro"
                     android:layout_width="fill_parent"
@@ -48,6 +49,7 @@
                     android:text="@string/endereco_logradouro"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_logradouro"
                     android:layout_width="fill_parent"
@@ -65,6 +67,7 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoNumero"
                     android:layout_width="fill_parent"
@@ -73,6 +76,7 @@
                     android:text="@string/endereco_numero"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_numero"
                     android:layout_width="fill_parent"
@@ -84,13 +88,14 @@
                     android:ems="10"
                     android:maxLength="5"
                     android:hint="@string/digite_seu_numero"
-                    android:inputType="numberSigned"/>
+                    android:inputType="numberSigned" />
 
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoComplemento"
                     android:layout_width="fill_parent"
@@ -99,6 +104,7 @@
                     android:text="@string/endereco_complemento"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_complemento"
                     android:layout_width="fill_parent"
@@ -116,6 +122,7 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoBairro"
                     android:layout_width="fill_parent"
@@ -124,6 +131,7 @@
                     android:text="@string/endereco_bairro"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_bairro"
                     android:layout_width="fill_parent"
@@ -141,6 +149,7 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoCidade"
                     android:layout_width="fill_parent"
@@ -149,6 +158,7 @@
                     android:text="@string/endereco_cidade"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_cidade"
                     android:layout_width="fill_parent"
@@ -166,6 +176,7 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoUf"
                     android:layout_width="fill_parent"
@@ -174,7 +185,9 @@
                     android:text="@string/endereco_uf"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
-                <Spinner android:id="@+id/spinner_endereco_uf"
+
+                <Spinner
+                    android:id="@+id/spinner_endereco_uf"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
@@ -184,13 +197,14 @@
                     android:ems="10"
                     android:hint="@string/escolha_sua_uf"
                     android:entries="@array/uf"
-                    android:spinnerMode="dropdown"/>
+                    android:spinnerMode="dropdown" />
 
                 <View
                     android:layout_width="fill_parent"
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <TextView
                     android:id="@+id/TexViewEnderecoCep"
                     android:layout_width="fill_parent"
@@ -199,6 +213,7 @@
                     android:text="@string/endereco_cep"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/editText_endereco_cep"
                     android:layout_width="fill_parent"
@@ -217,6 +232,7 @@
                     android:layout_height="1dp"
                     android:layout_marginBottom="2dp"
                     android:layout_marginTop="2dp" />
+
                 <Button
                     android:id="@+id/botao_finalizar_cadastro_endereco"
                     android:layout_width="fill_parent"
