Funcionalide para o cadastro de Fornecedores.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -130,6 +130,19 @@
                     android:text="@string/cadastrar" />
                     <!--android:layout_marginTop="24dp" -->
 
+                <Button
+                    android:id="@+id/botao_cadastrar_fornecedor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="4dp"
+                    android:layout_below="@+id/linearLayout4"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/shapebuttonborder"
+                    android:text="Cadastrar Fornecedor" />
+                <!--android:layout_marginTop="24dp" -->
+
 
             </LinearLayout>
         </ScrollView>
