--- a/app/src/main/res/layout/content_cadastro_servico.xml
+++ b/app/src/main/res/layout/content_cadastro_servico.xml
@@ -113,7 +113,7 @@
                     android:hint="@string/digite_descricao_servico" />
 
                 <Button
-                    android:id="@+id/botao_salvar_servico"
+                    android:id="@+id/btnSalvarServico"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
