Integrado Cadastro de Serviços com Fornecedor. Exibir lista de Pets cadastrados. Exibir lista de Serviços cadastrados. Adicionado WebService para pesquisar endereço pelo CEP. Adicionado visões diferentes para consumidor/fornecedor.

--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -7,7 +7,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lv_pets"
+        android:id="@+id/listView"
         android:dividerHeight="1dp"
         android:layout_gravity="center_horizontal|top" />
 
