--- a/app/src/main/res/layout/activity_cadastro_endereco.xml
+++ b/app/src/main/res/layout/activity_cadastro_endereco.xml
@@ -12,7 +12,8 @@
 
     <include
         android:id="@+id/tb_endereco"
-        layout="@layout/toolbar"></include>
+        layout="@layout/toolbar">
+    </include>
 
     <LinearLayout
 
@@ -32,7 +33,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <View
@@ -42,7 +42,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/TexViewEnderecoCep"
+                    android:id="@+id/tvCadastroCepEndereco"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -51,7 +51,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_endereco_cep"
+                    android:id="@+id/etCadastroCepEndereco"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/digite_seu_cep"
@@ -59,7 +59,7 @@
                     android:maxLength="9" />
 
                 <TextView
-                    android:id="@+id/TexViewEnderecoLogradouro"
+                    android:id="@+id/tvCadastroLogradouroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -68,11 +68,9 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_endereco_logradouro"
+                    android:id="@+id/etCadastroLogradouroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_margin="4dp"
                     android:layout_marginTop="31dp"
                     android:ems="10"
@@ -86,7 +84,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/TexViewEnderecoNumero"
+                    android:id="@+id/tvCadastroNumeroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -95,11 +93,9 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_endereco_numero"
+                    android:id="@+id/etCadastroNumeroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_margin="4dp"
                     android:layout_marginTop="31dp"
                     android:ems="10"
@@ -114,7 +110,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/TexViewEnderecoComplemento"
+                    android:id="@+id/tvCadastroComplementoEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -123,11 +119,9 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_endereco_complemento"
+                    android:id="@+id/etCadastroComplementoEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_margin="4dp"
                     android:layout_marginTop="31dp"
                     android:ems="10"
@@ -141,7 +135,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/TexViewEnderecoBairro"
+                    android:id="@+id/tvCadastroBairroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -150,11 +144,9 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_endereco_bairro"
+                    android:id="@+id/etCadastroBairroEndereco"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_margin="4dp"
                     android:layout_marginTop="31dp"
                     android:ems="10"
@@ -179,16 +171,16 @@
                     android:layout_width="match_parent">
 
                     <TextView
-                        android:id="@+id/TexViewEnderecoCidade"
+                        android:id="@+id/tvCadastroLocalidadeEndereco"
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="6dp"
-                        android:text="@string/endereco_cidade"
+                        android:text="@string/endereco_localidade"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/TexViewEnderecoUf"
+                        android:id="@+id/tvCadastroUfEndereco"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="6dp"
@@ -209,7 +201,7 @@
                         android:layout_width="180dp">
 
                         <EditText
-                            android:id="@+id/editText_endereco_localidade"
+                            android:id="@+id/etCadastroLocalidadeEndereco"
                             android:layout_width="300dp"
                             android:layout_height="wrap_content"
                             android:layout_margin="4dp"
