--- a/app/src/main/res/layout/activity_cadastro_fornecedor.xml
+++ b/app/src/main/res/layout/activity_cadastro_fornecedor.xml
@@ -12,7 +12,8 @@
 
     <include
         android:id="@+id/tb_cadastro_fornecedor"
-        layout="@layout/toolbar"></include>
+        layout="@layout/toolbar">
+    </include>
 
     <LinearLayout
 
@@ -32,7 +33,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <View
@@ -42,7 +42,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/TexViewCadastroNomeFornecedor"
+                    android:id="@+id/tvCadastroNomeFornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -51,11 +51,9 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_nome_fornecedor"
+                    android:id="@+id/etCadastroNomeFornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
                     android:layout_margin="4dp"
                     android:layout_marginTop="31dp"
                     android:ems="10"
@@ -69,7 +67,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/TexViewCadastroEmailFornecedor"
+                    android:id="@+id/tvCadastroEmailFornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -78,12 +76,9 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_email_fornecedor"
+                    android:id="@+id/etCadastroEmailFornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/editText_nome"
                     android:layout_margin="4dp"
                     android:ems="10"
                     android:hint="@string/digite_seu_email"
@@ -97,7 +92,7 @@
 
 
                 <TextView
-                    android:id="@+id/TexViewCadastroTelefoneFornecedor"
+                    android:id="@+id/tvCadastroTelefoneFornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -106,7 +101,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/Telefone_fornecedor"
+                    android:id="@+id/etCadastroTelefoneFornecedor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
@@ -121,7 +116,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/TexViewCadastroCPF_CNPJ_Fornecedor"
+                    android:id="@+id/tvCadastroCpfCnpjFornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -130,7 +125,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/CPF_CNPJ_fornecedor"
+                    android:id="@+id/etCadastroCpfCnpjFornecedor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -144,7 +139,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/TexViewHorarios"
+                    android:id="@+id/tvCadastroHorarioFornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -175,21 +170,18 @@
 
 
                 <TextView
-                    android:id="@+id/TexViewCadastroSenhaFornecedor"
+                    android:id="@+id/tvCadastroSenhaFornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
-                    android:text="@string/prompt_password"
+                    android:text="@string/prompt_senha"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_senha_fornecedor"
+                    android:id="@+id/etCadastroSenhaFornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/editText_email"
                     android:layout_margin="4dp"
                     android:ems="10"
                     android:hint="@string/digite_sua_senha"
@@ -202,7 +194,7 @@
                     android:layout_marginTop="2dp" />
 
                 <TextView
-                    android:id="@+id/TexViewCadastroRepetirSenhaFornecedor"
+                    android:id="@+id/tvCadastroSenha2Fornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="6dp"
@@ -211,12 +203,9 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/editText_senha2_fornecedor"
+                    android:id="@+id/etCadastroSenha2Fornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_below="@+id/editText_senha"
                     android:layout_margin="4dp"
                     android:ems="10"
                     android:hint="@string/repita_sua_senha"
@@ -226,10 +215,9 @@
                     android:id="@+id/botao_cadastrar_fornecedor"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/editText_senha2"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shapebutton"
-                    android:text="@string/cadastrar_novo_fornecedor" />
+                    android:text="@string/cadastrar_endereco" />
 
 
             </LinearLayout>
