--- a/app/src/main/res/layout/activity_cadastro_endereco.xml
+++ b/app/src/main/res/layout/activity_cadastro_endereco.xml
@@ -234,7 +234,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/shapebutton"
-                    android:text="@string/finalizar_cadastro" />
+                    android:text="@string/finalizar_cadastro"
+                    android:visibility="visible" />
 
             </LinearLayout>
 
